# qyet

./: .gitignore  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: test.yml
docs/: index.md
docs/stylesheet/: extra.css
qyet/: __init__.py
