[tool.poetry]
name = "qyet"
version = "0.1.2"
description = ""
authors = ["Vitor Buxbaum <vitorbuxbaum@gmail.com>"]
readme = "README.md"
packages = [{include = "qyet"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 5 - Production/Stable"
]

[tool.poetry.urls]
"Documentation" = "https://qyet.readthedocs.io/en/latest/"
"Repository" = "https://github.com/vbuxbaum/qyet"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.12.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.4.9"
mkdocstrings = "^0.24.0"
mkdocstrings-python = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = "."
addopts = "-vv --no-cov-on-fail --cov-report=term-missing --cov=qyet"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest"